config-root/namespaces/jx-staging/rust-demo2/rust-demo2-rust-demo2-deploy.yaml
# Source: rust-demo2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-demo2-rust-demo2
  labels:
    draft: draft-app
    chart: "rust-demo2-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: rust-demo2-rust-demo2
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: rust-demo2-rust-demo2
    spec:
      serviceAccountName: rust-demo2-rust-demo2
      containers:
        - name: rust-demo2
          image: "gcr.io/jenkins-x-labs-bdd/rust-demo2:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
