config-root/namespaces/jx-staging/rust-demo2/rust-demo2-svc.yaml
# Source: rust-demo2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-demo2
  labels:
    chart: "rust-demo2-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rust-demo2-rust-demo2
