config-root/namespaces/jx-staging/rust-demo2/rust-demo2-ingress.yaml
# Source: rust-demo2/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: rust-demo2
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: rust-demo2
              servicePort: 80
      host: rust-demo2-jx-staging.34.105.246.143.xip.io
